@@ -1,6 +1,6 @@
 GammaLib information
 ====================
-Version: 1.0.1 (5 January 2016)
+Version: 1.0.1 (13 January 2016)
 Author:  Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
 
 
