@@ -1,8 +1,9 @@
-2016-01-05  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-01-13  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Bug fix version 1.0.1 released
         ================================
 
+        Add units to CTA event list columns (#1616)
         Allow usage of numbers in FITS extension names (#1611)
         Solve compatibility issues with Anaconda on Mac OS X (#1607)
 
